--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "file-loader": "^6.2.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
   }
