--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
         "typescript": "^4.8.4"
     },
     "devDependencies": {
