--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@types/node": "^18.11.9",
+        "framer-motion": "^7.6.5",
+        "next": "^13.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0"
+    },
+    "devDependencies": {
+        "@types/react": "18.0.25",
         "@typescript-eslint/eslint-plugin": "^5.42.1",
         "@typescript-eslint/parser": "^5.42.1",
         "eslint": "^8.27.0",
         "eslint-config-next": "^13.0.2",
         "eslint-plugin-react": "^7.31.10",
-        "framer-motion": "^7.6.5",
-        "next": "^13.0.2",
         "prettier": "^2.7.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.6.0",
         "typescript": "^4.8.4"
-    },
-    "devDependencies": {
-        "@types/react": "18.0.25"
     }
 }
