--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "next": "^13.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.6.0"
+        "react-icons": "^4.6.0",
+        "sharp": "^0.31.2"
     },
     "devDependencies": {
         "@types/node": "^18.11.9",
         "@types/react": "18.0.25",
+        "@types/sharp": "^0.31.0",
         "@typescript-eslint/eslint-plugin": "^5.42.1",
         "@typescript-eslint/parser": "^5.42.1",
         "eslint": "^8.27.0",
