--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "next build && node build.js",
         "start": "next start",
         "lint": "next lint"
     },
@@ -24,6 +24,7 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "framer-motion": "^7.6.5",
+        "ncp": "^2.0.0",
         "next": "^13.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
