--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -8,14 +8,6 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
   - type: textarea
     id: what-happened
     attributes:
@@ -25,27 +17,20 @@ body:
       value: "A bug happened!"
     validations:
       required: true
-  - type: dropdown
+  - type: textarea
     id: system
     attributes:
-      label: Operating System
-      description: What operating system are you running?
-      options:
-        - Windows
-        - MacOs
-        - Linux
+      label: What operating system are you using?
+      placeholder: operating system
     validations:
       required: true
-  - type: dropdown
+  - type: textarea
     id: browsers
     attributes:
       label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
+      placeholder: browsers
+    validations:
+      required: true
   - type: textarea
     id: logs
     attributes:
