--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -12,11 +12,17 @@ body:
     id: what-happened
     attributes:
       label: What happened?
-      description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
     validations:
       required: true
+  - type: textarea
+    id: expectation
+    attributes:
+      label: If you expected something else to occur what did you expect?
+      placeholder: What did you expect to happen?
+    validations:
+      required: false
   - type: textarea
     id: system
     attributes:
