--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "framer-motion": "^7.6.5",
+        "mariadb": "^3.0.2",
         "ncp": "^2.0.0",
         "next": "^13.0.2",
         "react": "^18.2.0",
