--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
+        "sass": "^1.62.1",
         "sharp": "^0.31.2"
     },
     "devDependencies": {
