add rule to linter.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     },
     "plugins": ["react", "@typescript-eslint"],
     "rules": {
+        "linebreak-style": ["error", "unix"],
         "semi": ["error", "always"],
         "object-curly-spacing": ["error", "always"],
         "array-bracket-spacing": ["error", "never"],
