--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^10.16.1",
         "ioredis": "^5.3.2",
+        "mariadb": "^3.2.1",
         "ncp": "^2.0.0",
         "next": "^13.4.19",
         "react": "^18.2.0",
