--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
         "next": "^14.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
+        "react-icons": "^5.0.1",
         "sass": "^1.66.1",
-        "sharp": "^0.32.5"
+        "sharp": "^0.33.2"
     },
     "devDependencies": {
         "@types/node": "^20.5.7",
-        "@types/react": "18.2.21",
+        "@types/react": "^18.2.61",
         "@types/sharp": "^0.32.0",
-        "@typescript-eslint/eslint-plugin": "^6.5.0",
-        "@typescript-eslint/parser": "^6.5.0",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
         "eslint": "^8.48.0",
-        "eslint-config-next": "^13.4.19",
+        "eslint-config-next": "^14.1.1",
         "eslint-plugin-react": "^7.33.2",
         "prettier": "^3.0.2",
         "typescript": "^5.2.2"
