--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "<div id=\"top\"></div>",
     "private": true,
     "scripts": {
+        "prepare": "panda codegen",
         "dev": "next dev",
         "build": "next build && node build.js",
         "start": "next start",
@@ -20,9 +21,7 @@
     },
     "homepage": "https://github.com/nsccs/club_website#readme",
     "dependencies": {
-        "@chakra-ui/react": "^2.8.0",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
+        "@ark-ui/react": "^2.2.3",
         "framer-motion": "^11.0.8",
         "ioredis": "^5.3.2",
         "mariadb": "^3.2.1",
@@ -35,6 +34,7 @@
         "sharp": "^0.33.2"
     },
     "devDependencies": {
+        "@pandacss/dev": "^0.34.1",
         "@types/node": "^20.5.7",
         "@types/react": "^18.2.61",
         "@types/sharp": "^0.32.0",
