--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     },
     "homepage": "https://github.com/nsccs/club_website#readme",
     "dependencies": {
-        "@ark-ui/react": "^2.2.3",
+        "@zag-js/menu": "^0.42.0",
+        "@zag-js/react": "^0.42.0",
         "framer-motion": "^11.0.8",
         "ioredis": "^5.3.2",
         "mariadb": "^3.2.1",
         "ncp": "^2.0.0",
-        "next": "^14.1.1",
+        "next": "^14.1.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
@@ -41,7 +42,7 @@
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
         "eslint": "^8.48.0",
-        "eslint-config-next": "^14.1.1",
+        "eslint-config-next": "^14.1.4",
         "eslint-plugin-react": "^7.33.2",
         "prettier": "^3.0.2",
         "typescript": "^5.2.2"
