--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     },
     "homepage": "https://github.com/nsccs/club_website#readme",
     "dependencies": {
-        "@zag-js/menu": "^0.42.0",
-        "@zag-js/react": "^0.42.0",
+        "@react-spring/web": "^9.7.3",
+        "@zag-js/dialog": "^0.45.0",
+        "@zag-js/menu": "^0.45.0",
+        "@zag-js/react": "^0.45.0",
         "framer-motion": "^11.0.8",
         "ioredis": "^5.3.2",
         "mariadb": "^3.2.1",
