--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "<div id=\"top\"></div>",
     "private": true,
     "scripts": {
+        "prepare": "panda codegen",
         "dev": "next dev",
         "build": "next build && node build.js",
         "start": "next start",
@@ -20,28 +21,32 @@
     },
     "homepage": "https://github.com/nsccs/club_website#readme",
     "dependencies": {
-        "@chakra-ui/react": "^2.8.0",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "framer-motion": "^10.16.1",
+        "@react-spring/web": "^9.7.3",
+        "@zag-js/dialog": "x",
+        "@zag-js/menu": "x",
+        "@zag-js/popover": "^0.46.0",
+        "@zag-js/progress": "x",
+        "@zag-js/react": "x",
+        "framer-motion": "^11.0.8",
         "ioredis": "^5.3.2",
         "mariadb": "^3.2.1",
         "ncp": "^2.0.0",
-        "next": "^13.4.19",
+        "next": "^14.1.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
+        "react-icons": "^5.0.1",
         "sass": "^1.66.1",
-        "sharp": "^0.32.5"
+        "sharp": "^0.33.2"
     },
     "devDependencies": {
+        "@pandacss/dev": "^0.34.1",
         "@types/node": "^20.5.7",
-        "@types/react": "18.2.21",
+        "@types/react": "^18.2.61",
         "@types/sharp": "^0.32.0",
-        "@typescript-eslint/eslint-plugin": "^6.5.0",
-        "@typescript-eslint/parser": "^6.5.0",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
         "eslint": "^8.48.0",
-        "eslint-config-next": "^13.4.19",
+        "eslint-config-next": "^14.1.4",
         "eslint-plugin-react": "^7.33.2",
         "prettier": "^3.0.2",
         "typescript": "^5.2.2"
