--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,15 @@
 {
     "compilerOptions": {
+        "baseUrl": "./",
+        "paths": {
+            "@/components/*": ["components/*"],
+            "@/app/*": ["app/*"],
+            "@/lib/*": ["lib/*"],
+            "@/public/*": ["public/*"],
+            "@/img/*": ["public/img/*"],
+            "@/style/*": ["style/*"],
+            "@/styled-system/*": ["styled-system/*"],
+        },
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
@@ -14,8 +24,20 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ],
+        "strictNullChecks": true
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "app/(mainSite)/not-found.js"
+    ],
     "exclude": ["node_modules"]
 }
